added blog stuff (can offically start making blogs hehe)

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="z-10 flex flex-col overflow-scroll relative h-full">
+                    <div class="z-10 flex flex-col overflow-scroll relative h-screen">
                         <div id="main" class="py-5 px-6 flex-1">
                             <div class="flex flex-col gap-2">
                                 <div class="flex flex-col lg:flex-row gap-2 w-full">
@@ -261,7 +261,7 @@
                             </div>
                             <div class="flex flex-row flex-wrap gap-2 mt-2">
                                 <div class="flex flex-col p-10 bg-brown-darker rounded-xl flex-1">
-                                    <div id="best-projects">
+                                    <div id="best-projects" class="flex flex-col gap-2">
                                         <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Best Projects</h1>
                                         <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">These specific projects are by far the best I've made, in quality, and functionality. They simply out match what most others are capable of in high school.</span>
                                     </div>
@@ -270,7 +270,7 @@
                             </div>
                             <div class="flex flex-row flex-wrap gap-2 mt-2">
                                 <div class="flex flex-col p-10 bg-brown-darker rounded-xl flex-1">
-                                    <div id="languages">
+                                    <div id="languages" class="flex flex-col gap-2">
                                         <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Languages</h1>
                                         <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">My most used programming languages, followed by other languages I may have used for a while or just dabbled in.</span>
                                     </div>
