--- a/resume/index.html
+++ b/resume/index.html
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="z-10 flex flex-col overflow-scroll relative h-full">
+                    <div class="z-10 flex flex-col overflow-scroll relative h-screen">
                         <div id="main" class="py-5 px-6 flex-1">
                         </div>
                         <div class="bg-brown-darker select-none flex-2">
