--- a/blogs/index.html
+++ b/blogs/index.html
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="z-10 flex flex-col overflow-scroll relative h-full">
+                    <div class="z-10 flex flex-col overflow-scroll relative h-screen">
                         <div id="main" class="py-5 px-6 flex-1">
                             <div class="flex flex-col gap-2">
                                 <div class="flex flex-col md:flex-row gap-2 w-full">
@@ -180,6 +180,7 @@
                                         <input id="search" class="p-5 w-full outline-none rounded-xl bg-transparent placeholder-zinc-300" type="text" autocapitalize="off" autocorrect="off" autocomplete="off" autofocus="on" placeholder="Search for any blogs here">
                                     </div>
                                 </div>
+                                <div id="blogs" class="flex flex-row gap-2 flex-wrap"></div>
                             </div>
                         </div>
                         <div class="bg-brown-darker select-none flex-2">
