--- a/resume/index.html
+++ b/resume/index.html
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex h-full max-w-full flex-1 flex-col">
+                <div class="flex h-full max-w-full flex-1 flex-col h-screen">
                     <div class="z-10 flex flex-col py-3 px-4 bg-brown-darker">
                         <div id="navbar" class="w-full h-full flex flex-row-reverse justify-between items-center select-none">
                             <div class="flex flex-row gap-2">
