fixed blogs listing all 4 in a grid even on phone

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -180,7 +180,7 @@
                                         <input id="search" class="p-5 w-full outline-none rounded-xl bg-transparent placeholder-zinc-300" type="text" autocapitalize="off" autocorrect="off" autocomplete="off" autofocus="on" placeholder="Search for any blogs here">
                                     </div>
                                 </div>
-                                <div id="blogs" class="flex flex-row gap-2 flex-wrap"></div>
+                                <div id="blogs" class="flex flex-col lg:flex-row gap-2 flex-wrap"></div>
                             </div>
                         </div>
                         <div class="bg-brown-darker select-none flex-2">
