--- a/index.html
+++ b/index.html
@@ -219,13 +219,16 @@
                             </div>
                             <div class="w-full mt-2">
                                 <div class="flex flex-col gap-2">
-                                    <div class="flex flex-col-reverse lg:flex-row items-center p-10 bg-brown-darker rounded-xl">
-                                        <div id="who-am-i" class="w-full">
-                                            <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Who am I?</h1>
-                                            <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">My name is Braden, also known as Wo-r or BrandyBeers online. I'm a self taught programmer with over 4 years of experience, coding a wide range of things from simple javascript websites to fully developed websites with php, apis, backends, and even sql. I do pretty much anything I set my mind too, so even if its something I've never tried before, I will keep going at it until I get it right, or get it to at least function the way I intended. I love programming, to the point that its probably unhealthy, but hey, its fun at least.</span>
+                                    <div class="flex flex-col-reverse lg:flex-row gap-2">
+                                        <div class="flex flex-col-reverse lg:flex-row items-center p-10 bg-brown-darker rounded-xl flex-1">
+                                            <div id="who-am-i" class="w-full">
+                                                <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Who am I?</h1>
+                                                <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">My name is Braden, also known as Wo-r or BrandyBeers online. I'm a self taught programmer with over 4 years of experience, coding a wide range of things from simple javascript websites to fully developed websites with php, apis, backends, and even sql. I do pretty much anything I set my mind too, so even if its something I've never tried before, I will keep going at it until I get it right, or get it to at least function the way I intended. I love programming, to the point that its probably unhealthy, but hey, its fun at least.</span>
+                                            </div>
                                         </div>
-                                        <div class="bg-brown-dark p-[1px] h-[5px] w-[192px] lg:w-0  lg:h-[192px] my-12 lg:mx-12 transition-all"></div>
-                                        <img tooltip="A picture of me from senior year of high school" class="w-[300px] h-[300px] md:w-[400px] md:h-[400px] lg:w-[300px] lg:h-[300px] rounded-xl shadow-xl" src="./src/logo/portrait.png">
+                                        <div class="flex items-center p-0 bg-brown-darker rounded-xl flex-2">
+                                            <img tooltip="A picture of me from senior year of high school" class="w-full lg:w-[300px] lg:h-full rounded-xl shadow-xl" src="./src/logo/portrait.png">
+                                        </div>
                                     </div>
                                     <div class="flex flex-row flex-wrap w-full gap-2">
                                         <a goto="/resume/" tooltip="View or download my resume here" class="cursor-pointer flex-1 text-center select-none">
