added the function for seing the first 2 newest blogs from the blogs page

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                                 </div>
                                 <div class="flex flex-col xl:flex-row gap-2">
                                     <div class="flex flex-col gap-2 flex-1">
-                                        <div class="p-10 bg-brown-darker rounded-xl flex-1">
+                                        <div class="p-10 bg-brown-darker rounded-xl flex-2">
                                             <div class="flex flex-col flex-1 h-fit items-center lg:items-start">
                                                 <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-5xl font-nunitoblack font-black leading-tight tracking-tight">Learn about me</h1>
                                                 <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start text-center lg:text-left  items-center lg:items-start">Curious about who I am, and what I do? Select one of the options below to get started.</span>    
                                             </div>                                  
                                         </div>
-                                        <div class="flex flex-col lg:flex-row justify-between gap-2 select-none">
+                                        <div class="flex flex-col lg:flex-row justify-between gap-2 select-none flex-1">
                                             <a goto="#who-am-i" class="cursor-pointer flex-1 text-center">
                                                 <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
                                                     Who am I?
@@ -111,11 +111,7 @@
                                                 <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center text-center lg:text-left  lg:items-start">Want to know what I'm curious about? Check out some of my blogs to see what I like.</span>        
                                             </div>
                                         </div>
-                                        <div class="p-10 bg-brown-darker rounded-xl flex-1">
-                                            <div class="flex flex-row justify-center items-center gap-2">
-                                                <a>Currently there are no blogs, but just you wait though!</a>
-                                            </div>
-                                        </div>
+                                        <div id="previewBlogs" class="flex flex-col lg:flex-row flex-wrap gap-2 flex-2"></div>
                                     </div>
                                 </div>
                             </div>
