added a feedback page (outline rn)

--- a/index.html
+++ b/index.html
@@ -86,17 +86,19 @@
                                                 <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start text-center lg:text-left  items-center lg:items-start">Curious about who I am, and what I do? Select one of the options below to get started.</span>    
                                             </div>                                  
                                         </div>
-                                        <div class="flex flex-col lg:flex-row justify-between gap-2 select-none flex-1">
-                                            <a goto="#who-am-i" class="cursor-pointer flex-1 text-center">
-                                                <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
-                                                    Who am I?
-                                                </div>
-                                            </a>
-                                            <a goto="#best-projects" class="cursor-pointer flex-1 text-center">
-                                                <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
-                                                    Best Projects
-                                                </div>
-                                            </a>
+                                        <div class="flex flex-col justify-between gap-2 select-none flex-1">
+                                            <div class="flex flex-row gap-2">
+                                                <a goto="#who-am-i" class="cursor-pointer flex-1 text-center">
+                                                    <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
+                                                        Who am I?
+                                                    </div>
+                                                </a>
+                                                <a goto="#best-projects" class="cursor-pointer flex-1 text-center">
+                                                    <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
+                                                        Best Projects
+                                                    </div>
+                                                </a>
+                                            </div>
                                             <a goto="#languages" class="cursor-pointer flex-1 text-center">
                                                 <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
                                                     Languages
