added emailjs functionality to contacts

--- a/contact/index.html
+++ b/contact/index.html
@@ -107,7 +107,7 @@
                                                     <textarea id="message" class="p-5 w-full outline-none rounded-xl bg-transparent placeholder-zinc-300 resize-none" rows="2" placeholder="Share your feedback here"></textarea>
                                                 </div>
                                             </div>
-                                            <a id="submit" class="cursor-pointer flex-none text-center select-none" disabled>
+                                            <a id="submit" class="cursor-pointer flex-none text-center select-none">
                                                 <div ripple class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
                                                     <div class="flex flex-row justify-center items-center">
                                                         <span>Send Message</span>
@@ -137,7 +137,7 @@
                                             </div>
                                             <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-2">
                                                 <div class="flex flex-col flex-1 items-center text-center md:text-left">
-                                                    <span>You can contact me at <a goto="mailto:example@mail.com" class="font-nunitoblack text-brown hover:text-brown-light cursor-pointer">todo@mail.com</a> directly with your faviorite email service, if you don't prefer the feedback system.</span>  
+                                                    <span>You can contact me at <a goto="mailto:wor.personal@gmail.com" class="font-nunitoblack text-brown hover:text-brown-light cursor-pointer">wor.personal@gmail.com</a> directly with your faviorite email service, if you don't prefer the feedback system.</span>  
                                                 </div>
                                             </div>
                                         </div>
@@ -148,7 +148,7 @@
                                                 </div>
                                             </div>
                                             <div class="flex flex-row flex-wrap gap-2 flex-2">
-                                                <a class="flex-1 text-center select-none" tooltip="Checkout my github page and even give feedback on this websites repository">
+                                                <a goto="https://github.com/wo-r" class="flex-1 text-center select-none cursor-pointer" tooltip="Checkout my github page and even give feedback on this websites repository">
                                                     <div class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
                                                         <div class="flex flex-row justify-center items-center">
                                                             <svg width="98" height="96">    
@@ -157,7 +157,7 @@
                                                         </div>
                                                     </div>
                                                 </a>
-                                                <a class="flex-1 text-center select-none" tooltip="Checkout my youtube channel and give feedback on my videos or comment on something">
+                                                <a goto="https://www.youtube.com/@thatguywoods" class="flex-1 text-center select-none cursor-pointer" tooltip="Checkout my youtube channel and give feedback on my videos or comment on something">
                                                     <div class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 rounded-lg transition h-full flex items-center justify-center">
                                                         <div class="flex flex-row justify-center items-center">
                                                             <svg class="pb-[10px]" viewbox="0 0 50 45" width="120px" height="120px">    
@@ -186,6 +186,7 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
         <script src="./../src/script.js"></script>
         <script src="./../src/third/facebook.snow.js"></script>
     </body>
