added a lot for contacts (finished)

--- a/contact/index.html
+++ b/contact/index.html
@@ -182,6 +182,16 @@
                             </div>
                         </div>
                         <div id="footer" class="bg-brown-darker select-none flex-2"></div>
+                        <div id="feedbackStatus" class="fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-10 hidden">
+                            <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full max-w-md lg:max-w-xl flex-1 transition-all transform scale-95 opacity-0 transition-transform duration-300 ease-out">
+                                <div class="flex flex-col flex-1 items-center lg:items-start">
+                                    <div class="w-full bg-brown rounded-md mt-2">
+                                        <div id="progressBar" class="h-10 bg-brown-light rounded-md transition-all" style="width: 0%;"></div>
+                                    </div>
+                                    <p id="loadingMessage" class="mt-4 text-lg text-brown-100">Please wait...</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
