--- a/contact/index.html
+++ b/contact/index.html
@@ -125,7 +125,7 @@
                                             </div>
                                             <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-2">
                                                 <div class="flex flex-col flex-1 items-center text-center md:text-left">
-                                                    <span>I won't provide a full address (for now), however I will state that I live in the US, somewhere in the northern states.</span>  
+                                                    <span>I won't provide a full address (for now), however I will state that I live in the US, somewhere in the southern states.</span>  
                                                 </div>
                                             </div>
                                         </div>
