fix the little thing lol

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,7 +59,7 @@
                                 <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-1">
                                     <div class="flex flex-col flex-1 items-center lg:items-start">
                                         <h1 popup fast class="text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight flex flex-row gap-4">Portfolio</h1>
-                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start">Welcome to my Portfolio, where you can explore the range of projects I've had the pleasure of working on. From design and development to writing and creative collaborations, this space highlights my work and showcases the skills and passions that drive me.</span>    
+                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start">Welcome to my Portfolio, where you can explore a range of projects I've had the pleasure of working on. From design and development to writing and creative collaborations, this space highlights my work and showcases the skills and passions that drive me.</span>    
                                     </div>
                                 </div>
                                 <div id="gradpass" class="flex flex-col gap-2 lg:flex-row">
