Small fixes for the new years

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -92,7 +92,7 @@
                                     <div id="gallery" class="flex flex-col flex-1">
                                         <div class="p-0 bg-brown-darker rounded-t-xl flex flex-row lg:flex-row w-full flex-1">
                                             <div class="flex flex-row justify-center items-center w-full select-none">
-                                                <img class="w-full max-h-[500px] object-contain rounded-t-xl" src="">
+                                                <img class="" src="">
                                             </div>
                                         </div>
                                         <div class="p-5 bg-brown-dark rounded-b-xl flex flex-col lg:flex-row w-full flex-2">
