--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,6 +46,9 @@
         <link rel="stylesheet" href="./../src/style.css">
     </head>
     <body class="relative min-h-screen overflow-hidden box-border font-nunito bg-black text-zinc-300">
+        <div id="loader" class="fixed top-0 left-0 w-full h-full bg-black flex items-center justify-center z-[100]">
+            <div class="loader"></div>
+        </div>
         <div class="h-[100vh]">
             <div class="flex flex-row-reverse h-full w-full">
                 <div id="sidemenuContainer" class="flex flex-row-reversed"></div>
