fixed stuff again hehe

--- a/projects/index.html
+++ b/projects/index.html
@@ -82,7 +82,7 @@
                                         </svg>
                                     </div>
                                     <div class="bg-brown-darker rounded-xl flex-1 select-none">
-                                        <input id="search" class="p-5 w-full outline-none rounded-xl bg-transparent placeholder-zinc-300" type="text" autocapitalize="off" autocorrect="off" autocomplete="off" autofocus="on" placeholder="Search for any blogs here">
+                                        <input id="search" class="p-5 w-full outline-none rounded-xl bg-transparent placeholder-zinc-300" type="text" autocapitalize="off" autocorrect="off" autocomplete="off" autofocus="on" placeholder="Search for any projects here">
                                     </div>
                                 </div>
                                 <div id="projects" class="flex flex-col lg:flex-row gap-2 flex-wrap"></div>
