--- a/photography/index.html
+++ b/photography/index.html
@@ -75,7 +75,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="photos" class="flex flex-col lg:flex-row gap-2 flex-wrap"></div>
+                                <div id="photos" class="grid grid-cols-1 sm:grid-cols-2 gap-2"></div>
                             </div>
                         </div>
                         <div id="footer" class="bg-brown-darker select-none flex-2"></div>
