Big TODO: redo the HTML and remove popup because it isn't not good

--- a/resume/index.html
+++ b/resume/index.html
@@ -58,6 +58,20 @@
                     </div>
                     <div class="z-10 flex flex-col overflow-scroll relative h-screen">
                         <div id="main" class="py-5 px-6 flex-1">
+                            <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-1">
+                                <div class="flex flex-col flex-1 items-center lg:items-start">
+                                    <h1 
+                                        popup 
+                                        fast 
+                                        class="text-4xl sm:text-6xl md:text-8xl font-nunitoblack font-black pb-2"
+                                    >Welcome</h1>
+                                    <span 
+                                        popup 
+                                        extremelyFast 
+                                        class="text-sm md:text-md flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start"
+                                    >This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content.</span>    
+                                </div>
+                            </div>
                         </div>
                         <div id="footer" class="bg-brown-darker select-none flex-2"></div>
                     </div>
