--- a/src/debug.html
+++ b/src/debug.html
@@ -129,19 +129,19 @@
                             </div>  
                             <!--Tooltip Popup Example-->
                             <!--Popup Modals-->
-                            <!--Re-add "fixed bottom-6 left-0 md:left-6" to all modals below-->
-                            <div class="transition-all popupManager popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit transform -translate-x-1/2 bg-brown-dark border border-red-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
+                            <!--Re-add "fixed bottom-6 left-0 md:left-6" to all modals below, and "transform -translate-x-1/2"-->
+                            <div class="transition-all popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit bg-brown-dark border border-red-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
                                 <span>An unexpected error occured.</span>
                                 <small class="font-medium text-zinc-300 text-[12px] opacity-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nihil corporis similique obcaecati ipsam, impedit quas ipsa, praesentium incidunt eaque placeat velit pariatur laudantium minima asperiores, corrupti debitis? Incidunt, vitae.</small>
                             </div>
-                            <div class="transition-all popupManager popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit transform -translate-x-1/2 bg-brown-dark border border-green-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
+                            <div class="transition-all popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit bg-brown-dark border border-green-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
                                 <small class="font-medium text-zinc-300 text-[12px] opacity-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore pariatur fugit enim laborum, fugiat necessitatibus sit totam delectus eius officiis eveniet mollitia animi aspernatur dignissimos harum odit quidem, amet quos.</small>
                             </div>
-                            <div class="transition-all popupManager popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit transform -translate-x-1/2 bg-brown-dark border border-yellow-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
+                            <div class="transition-all popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit bg-brown-dark border border-yellow-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
                                 <span>An issue was found.</span>
                                 <small class="font-medium text-zinc-300 text-[12px] opacity-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi necessitatibus quia, voluptatum quos fugit dolore iure dolor quibusdam unde magni earum quasi fuga, accusamus aspernatur totam et! Totam, ipsam consequatur?</small>
                             </div>
-                            <div class="transition-all popupManager popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit transform -translate-x-1/2 bg-brown-dark border border-blue-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
+                            <div class="transition-all popup flex flex-col gap-1 break-all md:break-words md:max-w-[80ch] w-fit bg-brown-dark border border-blue-500 rounded-xl font-semibold p-5 text-zinc-300 font-black z-50 select-none shadow-xl">
                                 <small class="font-medium text-zinc-300 text-[12px] opacity-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit officia est voluptatum perspiciatis iste neque magni dolor ad, laborum sapiente culpa ullam ipsum ut rem aliquid ipsam necessitatibus dolore suscipit?</small>
                             </div>
                             <!--Popup Modals-->
