--- a/resume/index.html
+++ b/resume/index.html
@@ -7,20 +7,7 @@
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="author" content="Wo-r">
-        <meta name="title" content="Wo-r"/>
-        <meta name="language" content="English">
-        <meta name="description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
-        <meta property="og:type" content="website"/>
-        <meta property="og:url" content="https://wo-r.github.io/"/>
-        <meta property="og:title" content="Wo-r"/>
-        <meta property="og:description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
-        <meta property="og:image" content="./../src/logo/logo-full.jpg"/>
-        <meta property="twitter:card" content="summary_large_image"/>
-        <meta property="twitter:url" content="https://wo-r.github.io/"/>
-        <meta property="twitter:title" content="Wo-r"/>
-        <meta property="twitter:description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
-        <meta property="twitter:image" content="./../src/logo/logo-full.jpg"/>
+        <!--TODO:Meta-->
         <script src="./../src/third/jquery.min.js"></script>
         <script src="./../src/third/tailwind.min.js"></script>
         <script>
@@ -46,39 +33,7 @@
         <link rel="stylesheet" href="./../src/style.css">
     </head>
     <body class="relative min-h-screen overflow-hidden box-border font-nunito bg-black text-zinc-300">
-        <div id="loader" class="fixed top-0 left-0 w-full h-full bg-black flex items-center justify-center z-[100]">
-            <div class="loader"></div>
-        </div>
-        <div class="h-[100vh]">
-            <div class="flex flex-row-reverse h-full w-full">
-                <div id="sidemenuContainer" class="flex flex-row-reversed"></div>
-                <div class="flex h-full max-w-full flex-1 flex-col h-screen">
-                    <div class="z-10 flex flex-col py-3 px-4 bg-brown-darker transition-all opacity-1">
-                        <div id="navbar" class="w-full h-full flex flex-row-reverse justify-between items-center select-none"></div>
-                    </div>
-                    <div class="z-10 flex flex-col overflow-scroll relative h-screen">
-                        <div id="main" class="py-5 px-6 flex-1">
-                            <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-1">
-                                <div class="flex flex-col flex-1 items-center lg:items-start">
-                                    <h1 
-                                        popup 
-                                        fast 
-                                        class="text-4xl sm:text-6xl md:text-8xl font-nunitoblack font-black pb-2"
-                                    >Welcome</h1>
-                                    <span 
-                                        popup 
-                                        extremelyFast 
-                                        class="text-sm md:text-md flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start"
-                                    >This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content.</span>    
-                                </div>
-                            </div>
-                        </div>
-                        <div id="footer" class="bg-brown-darker select-none flex-2"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="./../src/script.js"></script>
-        <script src="./../src/third/facebook.snow.js"></script>
+        
+        <!--TODO:script-->
     </body>
 </html>
