--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href="./../src/style.css">
     </head>
     <body class="relative min-h-screen overflow-hidden box-border font-nunito bg-black text-zinc-300">
-        
-        <!--TODO:script-->
+        <!--TODO:content-->
+        <script src="./script.js"></script>
     </body>
 </html>
